tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__basic__circle.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Circle[]}]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<ellipse cx="180.00" cy="180.00" rx="166.67" ry="166.67" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</svg>
